extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L4/tests/arrayname.out
* _pp.ob
MODULE arrayname;

    TYPE
        atype1 = ARRAY 10 OF atype0;
        atype2 = ARRAY 3 * aconst OF INTEGER;

END arrayname.
* errors
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L4/tests/arrayname.ob:4:26:error: atype0 is not declared
    atype1 = ARRAY 10 OF atype0;
                         ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/oberon0/L4/tests/arrayname.ob:5:24:error: aconst is not declared
    atype2 = ARRAY 3 * aconst OF INTEGER;
                       ^
